--- a/versions/V2.0.md
+++ b/versions/V2.0.md
@@ -14,6 +14,11 @@ We are generating 2 pseudo-haplotypes (primary and alternate). The primary assem
 As explained by Heng Li ([here](https://lh3.github.io/2021/04/17/concepts-in-phased-assemblies)), given the characteristics of the latter, it cannot be considered on its own, but as a complement of the primary 
 assembly.
 
+There are 3 main differences with respect to the previous version of the pipeline. 
+- Input chromatin conformation capture data we use is Omni-C data, not Hi-C.
+- The version of the *de novo* assembler, changed from 0.13 to 0.15.
+- The workflow to generate the mitogenome assembly changed to MitoHiFi
+
 ## Software
 
 Almost all of the links will send you to the corresponding repository. 
@@ -26,7 +31,7 @@ The rest of the links correspond to the main documentation web site of the tool.
 | Filtering PacBio HiFi adapters |  [HiFiAdapterFilt](https://github.com/sheinasim/HiFiAdapterFilt) | Commit `64d1c7b` | 
 | K-mer counting |  [meryl](https://github.com/marbl/meryl) | `1` | 
 | Estimation of genome size and heterozygosity |  [GenomeScope](https://github.com/tbenavi1/genomescope2.0) | `2` |
-| *de novo* assembly (contiging) |  [HiFiasm](https://github.com/chhylp123/hifiasm) |   `0.13-r30`8 |
+| *de novo* assembly (contiging) |  [HiFiasm](https://github.com/chhylp123/hifiasm) |   `0.15-r327` |
 | Long-read, genome-genome alignment |  [minimap2](https://github.com/lh3/minimap2) |  `2.16` | 
 | Remove low-coverage, duplicated contigs | [purge_dups](https://github.com/dfguan/purge_dups) | `1.0.1` |
 | HiC mapping for SALSA |  [Arima Genomics mapping pipeline](https://github.com/ArimaGenomics/mapping_pipeline) |  Commit `2e74ea4` | 
@@ -53,8 +58,6 @@ The rest of the links correspond to the main documentation web site of the tool.
 | Purpose | Program | Version | 
 |:-------|:---------|--------:|
 | Mitgenome assembly | MitoHiFi |  2 Commit c06ed3e  | 
-
-
 
 ### Genome quality assessment
 
