--- a/versions/V2.0.md
+++ b/versions/V2.0.md
@@ -57,7 +57,7 @@ The rest of the links correspond to the main documentation web site of the tool.
 
 | Purpose | Program | Version | 
 |:-------|:---------|--------:|
-| Mitgenome assembly | MitoHiFi |  2 Commit c06ed3e  | 
+| Mitgenome assembly | [MitoHiFi](https://github.com/marcelauliano/MitoHiFi) |  2 Commit c06ed3e  | 
 
 ### Genome quality assessment
 
