--- a/versions/V3.0.md
+++ b/versions/V3.0.md
@@ -84,6 +84,10 @@ The rest of the links correspond to the main documentation web site of the tool.
 
 [Bernardi G, DeBiasse MB, Escalona M, Marimuthu MPA, Nguyen O, Sacco S, Beraut E, Miller C, Toffelmier E, Shaffer HB (2022) ***Reference Genome of the California Sheephead, Semicossyphus pulcher (Labridae, Perciformes), A Keystone Fish Predator in Kelp Forest Ecosystems***. Journal of Heredity, 113 (6): 649-656, https://doi.org/10.1093/jhered/esac032](https://academic.oup.com/jhered/article/113/6/649/6626057)
 
+- Cebidichthys violaceus
+
+[Wright DB, Escalona M, Marimuthu MPA, Sahasrabudhe R, Nguyen O, Sacco S, Beraut E, Toffelmier E, Miller C, Shaffer HB, Bernardi G, German DP. (2023) Reference genome of the Monkeyface Prickleback, Cebidichthys violaceus. Journal of Heredity; 114(1):52-59. https://doi.org/10.1093/jhered/esac054]()
+
 - *Artemisiospiza belli* (Paper in progress) 
 - *Melospiza melodia* (Paper in progress)
 - *Passerculus sandwichensis* (Paper in progress)
