--- a/versions/V4.0.md
+++ b/versions/V4.0.md
@@ -102,21 +102,29 @@ The rest of the links correspond to the main documentation web site of the tool.
 
 [Grismer JL, Escalona M, Miller C, Beraut E, Fairbairn CW, Marimuthu MPA, Nguyen O, Toffelmier E, Wang IJ, Shaffer HB (2022) Reference genome of the Rubber Boa, Charina bottae (Serpentes: Boidae). Journal of Heredity, 113 (6): 641–648, https://doi.org/10.1093/jhered/esac048](https://academic.oup.com/jhered/article/113/6/641/6691355)
 
+- Callipepla californica
+
+[Benham PM, Cicero C, Escalona M, Beraut E, Marimuthu MPA, Nguyen O, Nachman MW, Bowie RCK (2023) A highly contiguous genome assembly for the California quail (Callipepla californica). Journal of Heredity, esad008, https://doi.org/10.1093/jhered/esad008](https://academic.oup.com/jhered/advance-article/doi/10.1093/jhered/esad008/7034149)
+
+- Tetragnatha versicolor
+
+[Adams SA, Graham N, Holmquist A, Sheffer M, Steigerwald EC, Sahasrabudhe R, Nguyen O, Beraut E, Fairbairn C, Sacco S, Seligmann W, Escalona M, Shaffer HB, Toffelmier E, Gillespie RG (2023) Reference genome of the long-jawed orb-weaver, Tetragnatha versicolor (Araneae: Tetragnathidae). Journal of Heredity, esad013. https://doi.org/10.1093/jhered/esad013](https://academic.oup.com/jhered/advance-article/doi/10.1093/jhered/esad013/7115827)
+
+- Cyanocitta stelleri
+
+
 - Hetaerina americana
 - Elgaria multicarinata
 - Aquilegia eximia
 - Aspidoscelis tigris
 - Diadophis punctatus
 - Quercus wislizeni
-- Callipepla californica
 - Sceloporus occidentalis
 - Actinemys pallida
 - Heteromeles arbutifolia
 - Setophaga petechia
 - Crotalus oreganus
-- Tetragnatha versicolor
 - Dipodomys merriami
-- Cyanocitta stelleri
 - Melanerpes formicivorus
 - Rubus parviflorus
 - Nemophila menziesii
