--- a/versions/V2.0.md
+++ b/versions/V2.0.md
@@ -78,3 +78,13 @@ The rest of the links correspond to the main documentation web site of the tool.
 - *Haliotis cracherodii*
 
 [Orland C*, Escalona M* (* Co-first author), Sahasrabudhe R, Marimuthu MPA, Nguyen O, Beraut E, Marshman B, Moore J, Raimondi P, Shapiro B (2022) ***A Draft Reference Genome Assembly of the Critically Endangered Black Abalone, Haliotis cracherodii***. Journal of Heredity, 113 (6): 665–672, https://doi.org/10.1093/jhered/esac024](https://academic.oup.com/jhered/article/113/6/665/6585917)
+
+
+- *Laterallis jamaicensis*
+
+[Hall LA, Wang IJ, Escalona M, Beraut E, Sacco S, Sahasrabudhe R, Nguyen O, Toffelmier E, Shaffer HB, Beissinger SR. (2023) Reference genome of the black rail, Laterallus jamaicensis. Journal of  Heredity, esad025.  https://doi.org/10.1093/jhered/esad025](https://academic.oup.com/jhered/advance-article/doi/10.1093/jhered/esad025/7146896)
+
+- *Rallus limicola*
+
+[Hall LA, Wang IJ, Escalona M, Beraut E, Sacco S, Sahasrabudhe R, Nguyen O, Toffelmier E, Shaffer HB, Beissinger SR (2023) Reference genome of the Virginia rail, Rallus limicola. Journal of Heredity, esad026. https://doi.org/10.1093/jhered/esad026](https://academic.oup.com/jhered/advance-article/doi/10.1093/jhered/esad026/7146174)
+
