--- a/versions/V4.0.md
+++ b/versions/V4.0.md
@@ -114,17 +114,7 @@ The rest of the links correspond to the main documentation web site of the tool.
 
 
 - Hetaerina americana
-- Elgaria multicarinata
-- Aquilegia eximia
-- Aspidoscelis tigris
-- Diadophis punctatus
-- Quercus wislizeni
-- Sceloporus occidentalis
-- Actinemys pallida
-- Heteromeles arbutifolia
-- Setophaga petechia
-- Crotalus oreganus
-- Dipodomys merriami
-- Melanerpes formicivorus
-- Rubus parviflorus
-- Nemophila menziesii
+
+[Grether GF, Beninde J, Beraut E, Chumchim N, Escalona M, MacDonald ZG, Miller C, Sahasrabudhe R, Shedlock AM, Toffelmier E, Shaffer HB (2023) Reference genome for the American rubyspot damselfly, Hetaerina americana. Journal of  Heredity, esad031. https://doi.org/10.1093/jhered/esad031 
+](https://academic.oup.com/jhered/advance-article/doi/10.1093/jhered/esad031/7169151)
+
