--- a/versions/V5.0.md
+++ b/versions/V5.0.md
@@ -67,9 +67,15 @@ The rest of the links correspond to the main documentation web site of the tool.
 | k-mer based assembly evaluation | [Merqury](https://github.com/marbl/merqury) |  `1` | 
 | Contamination screening | [BlobToolKit](https://github.com/blobtoolkit/blobtools2) | `2.3.3` |
 
+### Rapid curation
+
+| Purpose | Program | Version | 
+|:-------|:---------|--------:|
+| Manual curation | [Rapid curation pipeline (Wellcome Trust Sanger Institute, Genome Reference Informatics Team)](https://gitlab.com/wtsi-grit/rapid-curation)  | Commit 4ddca450 |
 
 # Species generated with this pipeline
 
 
 - *Phrynosoma blainvillii*
+
 [Richmond JQ, McGuire JA, Escalona M, Marimuthu MPA, Nguyen O, Sacco S, Beraut E, Toffelmier E, Fisher RN, Wang IJ, Shaffer HB (2023) Reference genome of an iconic lizard in western North America, Blainville's horned lizard Phrynosoma blainvillii. Journal of Heredity, esad032. https://doi.org/10.1093/jhered/esad032](https://academic.oup.com/jhered/advance-article/doi/10.1093/jhered/esad032/7169128)
