--- a/versions/V5.0.md
+++ b/versions/V5.0.md
@@ -13,7 +13,7 @@ The final output corresponds to a dual or partially phased diploid assembly (htt
 The difference between versions is related to a new step that has been added where we attempt to improve the genome assembly
 by manually curating both haplotypes using the Rapid Curation toolkit from the Welcome Trust Sanger Institute.
 
-## Software
+## Software versions
 
 Almost all of the links will send you to the corresponding repository. 
 The rest of the links correspond to the main documentation web site of the tool.
