--- a/versions/V5.0.md
+++ b/versions/V5.0.md
@@ -32,7 +32,7 @@ The rest of the links correspond to the main documentation web site of the tool.
 |:-------|:---------|--------:|
 | *de novo* assembly (contiging) |  [HiFiasm](https://github.com/chhylp123/hifiasm) |   `0.16.1-r375` |
 | Long-read, genome-genome alignment |  [minimap2](https://github.com/lh3/minimap2) |  `2.16` | 
-| Remove low-coverage, duplicated contigs | [purge_dups](https://github.com/dfguan/purge_dups) | `1.0.1` |
+| **(Optional)** Remove low-coverage, duplicated contigs | [purge_dups](https://github.com/dfguan/purge_dups) | `1.0.1` |
 | HiC mapping for SALSA |  [Arima Genomics mapping pipeline](https://github.com/ArimaGenomics/mapping_pipeline) |  Commit `2e74ea4` | 
 | HiC Scaffolding | [SALSA](https://github.com/marbl/SALSA) | `2` | 
 | Gap closing |  [YAGCloser](https://github.com/merlyescalona/yagcloser) | Commit `20e2769` | 
